--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Advanager</string>
-    <string name="title_home">Home</string>
-    <string name="title_dashboard">Dashboard</string>
+    <string name="title_log">Log</string>
+    <string name="title_stream">Stream</string>
     <string name="title_notifications">Notifications</string>
+    <string name="info_scan_warning_no_wifi">Scan device is only enabled when Wi-fi is enabled</string>
 </resources>
