--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="title_log">Log</string>
     <string name="title_stream">Stream</string>
     <string name="title_notifications">Notifications</string>
+    <string name="title_setting">Setting</string>
     <string name="wifi_warning">Wi-fi is required when scanning devices</string>
     <string name="internet_warning">Internet is not available</string>
 </resources>
